Fix concurrency, sorting, Event not started bug, and optimize for LED
